Debug: Add beige background, z-index, red border, fix card height

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0f0f0f;
+  background-color: #fae7b4;
   color: #f5f5f1;
   min-height: 100vh;
 }
